# slack-card-approval

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/plans/: 2026-05-28-slack-card-approval-design.md  2026-05-28-slack-card-approval.md
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: build_lambda.sh
src/: app.py  clock.py  config.py  constants.py  db.py  lambda_handler.py  main.py  schema.sql  secrets_loader.py
src/handlers/: buttons.py  command.py  view_submission.py
src/services/: approval_repo.py  sheets_retry.py  sheets_sync.py
src/views/: approval_card.py  modal.py
tests/: test_approval_card.py  test_approval_repo.py  test_buttons.py  test_command_handler.py  test_config.py  test_constants.py  test_db.py  test_modal.py  test_sheets_retry.py  test_sheets_sync.py  test_view_submission.py
