[project]
name = "slack-card-approval"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "slack-bolt>=1.18",
  "gspread>=6.0",
  "google-auth>=2.28",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
