[project]
name = "slack-card-approval"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "slack-bolt>=1.18",
  "gspread>=6.0",
  "google-auth>=2.28",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
# boto3는 Lambda 런타임에 기본 포함. 로컬에서 SSM 경로를 테스트할 때만 필요.
dev = ["pytest>=8.0", "pytest-mock>=3.12", "boto3>=1.34"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
